--- a/css/demo.css
+++ b/css/demo.css
@@ -101,7 +101,7 @@ a:focus {
 }
 
 .main {
-	max-width: 86em;
+	max-width: 96em;
 	margin: 0 auto;
 }
 
@@ -181,7 +181,7 @@ svg:hover {
 
 .log {
 	border: 1px solid rgba(255, 255, 255, 0.2);
-	min-height: 360px;
+	min-height: 412px;
 	font-family: 'Courier New', Courier, monospace;
 	font-size: 16px;
 	padding: 1.6em;
@@ -209,10 +209,16 @@ button {
 	text-shadow: #000 1px 1px;
 }
 
+button {
+	position: absolute;
+	left: 32px;
+	top: 36px;
+}
+
 .ros-demos a:hover,
 .ros-demos a:active,
 .ros-demos a.current-demo {
-	background: rgba(86, 216, 228, 1);
+	background: rgba(237, 106, 90, 1);
 }
 
 button {
@@ -245,12 +251,58 @@ button:active {
 }
 
 .flex-container .n {
-	width: 20vw;
-	height: 12vh;
+	width: 180px;
+	height: 100px;
+}
+
+.ltr {
+	text-align: center;
+	margin: 0 auto;
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+
+.utd {
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	align-items: center;
+}
+
+.svg-arrow {
+	display: flex;
+	justify-content: center;
+	flex-direction: row;
+	text-align: center;
+}
+
+.svg-arrow svg {
+	height: 20px;
+	width: 20px;
+}
+
+.italic {
+	font-style: italic;
+	font-size: 20px;
+}
+
+.vno {
+	visibility: hidden;
+}
+
+.arrow svg {
+	color: rgba(255, 255, 255, 0.9);
+}
+
+.arrow svg:hover {
+	color: rgba(255, 255, 255, 1.0);
 }
 
 .roslibjsworkflow .round {
-	width: 190px;
+	width: 180px;
 	height: 100px;
 	border-radius: 10px;
 	overflow: hidden;
@@ -262,7 +314,7 @@ button:active {
 	position: relative;
 	left: 14px;
 	top: -80px;
-	width: 16px;
+	width: 10px;
 	height: 60px;
 	border-radius: 12px;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
@@ -282,23 +334,33 @@ button:active {
 	animation: roundnow 300s linear infinite;
 	-webkit-transform: rotate(0deg);
 	transform: rotate(0deg);
-	font-size: 16px;
+	font-size: 26px;
+}
+
+.roundcolor {
+	background: rgba(237, 106, 90, 1.0) !important;
+}
+
+.roundcolor2 {
+	background: rgba(255, 22, 84, 1.0) !important;
 }
 
 input {
 	border: 0px;
 	padding: 16px 30px;
 	margin: 2em auto;
-	color: #fff;
 	font-size: 1em;
-	background-color: #0091ea;
+	background-color: #fff;
+	color: rgba(237, 106, 90, 0.8);
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.5);
+	border-radius: 10px;
+	width: 100%;
 }
 
 input:hover {
 	cursor: pointer;
-	background-color: #fff;
-	color: #0091ea;
+	color: #fff;
+  background-color: rgba(237, 106, 90, 0.8);
 	border: 0px;
 }
 
