--- a/css/demo.css
+++ b/css/demo.css
@@ -97,7 +97,7 @@ a:focus {
 
 .twodmap {
 	border: 1px solid rgba(255, 255, 255, 0.2);
-	padding: 4em;
+	/* padding: 4em; */
 }
 
 .main {
@@ -181,7 +181,7 @@ svg:hover {
 
 .log {
 	border: 1px solid rgba(255, 255, 255, 0.2);
-	min-height: 500px;
+	min-height: 460px;
 	font-family: 'Courier New', Courier, monospace;
 	font-size: 16px;
 	padding: 1em;
@@ -341,6 +341,10 @@ button:active {
 	transform: rotate(0deg);
 	font-size: 26px;
 }
+
+/* .roundnow:hover {
+	background-color: rgba(10, 36, 99, 1.0);
+} */
 
 .roundcolor {
 	background: rgba(216, 49, 91, 1.0) !important;
